--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -2,12 +2,12 @@
 obs_dir: "/storage/external_01/scintilla/EEA_DATA"  # Must contain PM10_hour.csv, PM25_hour.csv, ecc.
 camx_dir: "/storage/external_01/scintilla/CAMx/DATA/" 
 
-interpolated_observation_path: /storage/external_01/scintilla/processed_afno/obs_interpolated_2017.npz
-training_simulated_path: /storage/external_01/scintilla/processed_afno/training_2017.zarr # CAMx dataset
-training_checkpoints_dir: /storage/external_01/scintilla/processed_afno/tmp_chunks
+interpolated_observation_path: /storage/external_01/scintilla/processed_afno/training_2017/obs
+training_simulated_path: /storage/external_01/scintilla/processed_afno/training_2017/sim # CAMx dataset
 
 input_vars:
 - PM10
+
 output_vars:
 - PM10
 
