--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,6 +1,10 @@
-alpha: 0.4 # Simulated
-beta: 0.6 # Observed
+alpha: 0.4
+beta: 0.6
 
 batch_size: 4
 epochs: 50
-learning_rate: 0.0001
+lr: 0.0001
+validation_set: 0.2
+early_stopping: 10
+num_workers: 4
+log_path: training_metrics.csv
